Se agregó la opción de salir y se modificó las dimensiones del sidebar

--- a/ProyectoWeb/index3.0.html
+++ b/ProyectoWeb/index3.0.html
@@ -123,7 +123,7 @@
             <li>
                 <a href="#" class="ventas-btn">
                     <i class="fas fa-cart-plus"></i>
-                    Ventas
+                    <span>Ventas</span>
                     <span class="fas fa-angle-down uno"></span>
                 </a>
       
@@ -137,7 +137,7 @@
             <li>
                 <a href="#" class="servicios-btn">
                     <i class="fas fa-shipping-fast"></i>
-                    Sevicios
+                    <span>Sevicios</span>
                     <span class="fas fa-angle-down dos"></span>
                 </a>
                 <ul class="submenu-servicio">
@@ -149,7 +149,7 @@
             <li>
                 <a href="#" class="compras-btn">
                     <i class="fas fa-tags" class="compras-btn"></i>
-                    Compras
+                    <span>Compras</span>
                     <span class="fas fa-angle-down tres"></span>
                 </a>
                 <ul class="submenu-compras">
@@ -161,7 +161,7 @@
             <li>
                 <a href="#" class="productos-btn">
                     <i class="fas fa-broom"></i>
-                    Producto
+                    <span>Producto</span>
                     <span class="fas fa-angle-down cuatro"></span>
                 </a>
                 <ul class="submenu-producto">
@@ -175,7 +175,7 @@
             <li>
                 <a href="#"class="proveedores-btn">
                     <i class="fas fa-address-book"></i>
-                    Proveedores
+                    <span>Proveedores</span>
                     <span class="fas fa-angle-down cinco"></span>
                 </a>
                 <ul class="submenu-proveedores">
@@ -188,7 +188,7 @@
             <li>
                 <a href="#"class="empleado-btn">
                     <i class="fas fa-address-card"></i>
-                    Empleado
+                    <span>Empleado</span>
                     <span class="fas fa-angle-down seis"></span>
                 </a>
                 <ul class="submenu-empleado">
@@ -197,6 +197,13 @@
                     <li><a href="#">Actualización</a></li>
                 </ul>
             </li>
+            <li>
+                <a href="#"class="salir-btn">
+                    <i class="fas fa-sign-out-alt"></i>
+                    <span>Salir</span>
+                </a>
+            </li>
+            
         </ul>
     </nav>
 
@@ -247,3 +254,5 @@
     </script>
 </body>
 </html>
+
+<!-- https://fontawesome.com/ Iconos -->
